--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
             </div>
             <a class="text-center btn rounded-circle shadow login_btn" href="html/main.html">
-                <i class=" material-icons">keyboard_arrow_right</i>
+                <i class=" material-icons" style="margin-top:5px;">keyboard_arrow_right</i>
             </a>
         </form>
         </div>
