--- a/html/main.html
+++ b/html/main.html
@@ -21,10 +21,10 @@
     <div class="col-sm-5" style="margin-left: 3vw"><h2 style="color:#56bac8; font-weight: bolder;">Teal</h2></div>
     <div class="col-sm-5 " style="text-align: right;margin-right: 3vw;">
         <span>Hi, Allen!</span>
-        <a class="btn btn-default" href="profile.html">
+        <div class="btn">
             <!--<i class="fa fa-user"></i>-->
             <img class="rounded-circle" alt="prfile_pic" height="36" width="36" src="../resource/allen_profile.jpg"/>
-        </a>
+        </div>
     </div>
     </header>
 
