--- a/html/main.html
+++ b/html/main.html
@@ -102,7 +102,7 @@
         <div  class="jumbotron bg-white shadow-sm" style="padding: 2rem 1rem;">
         <div class="d-flex w-100 justify-content-start mb-2">
         <h5>Feel free to take a break. </h5>
-           <button class="btn btn-lg"
+           <button class="btn pt-0"
               data-toggle="popover"
               title="The Mood Bar"
                    data-placement="bottom"
@@ -123,7 +123,7 @@
             <div style="color:gray">
                 <div style="">Last update:</div>
                 <div>
-                <small id="last_update">1:37 usage of aggressive vocabulary detected +5 </small>
+                <small id="last_update">01:37 usage of aggressive vocabulary detected +5 </small>
                 </div>
                 <div>
                     <small id="second_last_update"></small>
@@ -163,7 +163,7 @@
                 <div class="container message doc">
                     <img src="../resource/threapist.jpg" class="rounded-circle" height="32" width="32" alt="therapist_pic"/>
                     <div class="container msg_box rounded shadow-sm ">
-                        <span>We can schedule an appointment to disscus about your feelings! Let me know your availability and I can put you on the calendar. :D</span>
+                        <span>We can schedule an appointment to discuss about your feelings! Let me know your availability and I can put you on the calendar. :D</span>
                     </div>
                 </div>
             </div>
