--- a/html/main.html
+++ b/html/main.html
@@ -147,7 +147,7 @@
             aria-controls="collapseExample" class="float rounded-circle add_btn btn " href="#collapseExample" id="chat_btn">
             <i class="my-float material-icons">chat</i>
         </a>
-    <div class="collapse float_chat animated rotateInUpRight shadow rounded" id="collapseExample" >
+    <div class="collapse float_chat shadow rounded" id="collapseExample" >
         <header class="p-2 rounded-top" style="background-color: #8fdee5; color:white; text-align: right;">
             <i class="material-icons"> phone </i>
             <i class="material-icons"> videocam </i>
