--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <div class="carousel-item">
         <div class="row justify-content-center">
             <div class="col-5 middle">
-                <div class="align-self-center text-left animated slideInLeft" style="color:#424242;">
+                <div class="align-self-center text-left animated slideInUp" style="color:#424242;">
                     <h1 class="font-weight-bold">Keeping Track </h1>
                     <p>Measuring your stress level in real time.</p>
                 </div>
             </div>
-            <div class="col-4 pic_face animated slideInRight">
+            <div class="col-4 pic_face">
                 <img src="resource/page1.png" style="width: 30vw;" alt="page1_pic"/>
             </div>
         </div>
@@ -47,7 +47,7 @@
                         <p>Connect with your therapist! Chat made easy and secured.</p>
                     </div>
                 </div>
-                <div class="col-4 pic_face animated slideInDown">
+                <div class="col-4 pic_face ">
                     <img src="resource/page2.png" style="width: 30vw;" alt="page1_pic"/>
                 </div>
             </div>
@@ -55,12 +55,12 @@
         <div class="carousel-item">
             <div class="row justify-content-center">
                 <div class="col-5 middle">
-                    <div class="align-self-center text-left animated rotateInDownLeft" style="color:#424242;">
+                    <div class="align-self-center text-left" style="color:#424242;">
                         <h1 class="font-weight-bold ">Get things done </h1>
                         <p>Know how you are doing from therapist's notes!</p>
                     </div>
                 </div>
-                <div class="col-4 pic_face animated rotateInUpRight">
+                <div class="col-4 pic_face animated slideInDown">
                     <img src="resource/page3.png" style="width: 30vw;" alt="page1_pic"/>
                 </div>
             </div>
