--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="form-group">
                             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                         </div>
-                        <a class="text-center btn rounded-circle shadow login_btn" href="html/main.html">
+                        <a class="text-center btn rounded-circle shadow login_btn" id="submit" onclick="validate()">
                             <i class=" material-icons" style="margin-top:5px;" >keyboard_arrow_right</i>
                         </a>
                     </form>
