--- a/html/main.html
+++ b/html/main.html
@@ -46,13 +46,13 @@
 <body>
 
 <div id="main">
-    <div class=" collapse dropdown-menu-right float_profile no-transition shadow rounded bg-light mr-3"  id="collapseExample2">
+    <div class=" collapse dropdown-menu-right float_profile no-transition shadow rounded bg-white mr-3"  id="collapseExample2">
         <div>
             <h6 class="dropdown-header" style="color: black; font-size: medium">Allen Who</h6>
             <span class="dropdown-header" style="padding-bottom: 0;padding-top: 2px; font-size: smaller"> hututu123@gmail.com</span>
         </div>
-        <div class="dropdown-divider bg-white"></div>
-        <div class="bg-white rounded">
+        <div class="dropdown-divider "></div>
+        <div class="bg-light rounded">
             <h6 class="dropdown-header" style="color: black; font-size: medium">Synchronization</h6>
         <div class="dropdown-item pr-1" style="font-size: small">
             Wearable Device
@@ -61,7 +61,7 @@
             <span class="slider round"></span>
         </label>
         </div>
-            <div class="dropdown-item pr-1" style="font-size: small">
+            <div class="dropdown-item pr-1 " style="font-size: small">
                 Social Media
                 <label  class="switch align-middle">
                     <input id="socialSwitch" type="checkbox">
@@ -69,8 +69,8 @@
                 </label>
             </div>
         </div>
-        <div class="dropdown-divider bg-white"></div>
-        <div class="bg-white rounded">
+        <div class="dropdown-divider bg-light"></div>
+        <div class="bg-light rounded">
             <h6 class="dropdown-header" style="color: black; font-size: medium">User Account</h6>
             <a class="dropdown-item pr-1" style="font-size: small" href="../index.html"> Logout</a>
         </div>
@@ -101,7 +101,7 @@
             <button class="btn btn-lg same_back inactive_btn" id="ongoing">Upcoming </button>
             <button class="btn btn-lg same_back" id="completed">Past</button>
         </div>
-            <ul  class="list-group mb-3 p-3" id="taskList" style="max-height: 70vh;overflow: scroll;">
+            <ul  class="list-group mb-3 p-3" id="taskList" style="max-height: 70vh;overflow-y: scroll;">
                 <li data-toggle="modal" data-target="#exampleModal" data-pass="Upcoming Session" data-type="Appointment"
                     data-date="November 17, 2018, 13:00pm" data-description="Regular session with Dr.Dow."
                     class="vis rounded_large list-group-item row ongoing task card flex-md-row mb-3 shadow-sm upcoming">
@@ -160,7 +160,7 @@
         <div  class="jumbotron bg-white shadow-sm mb-3" style="padding: 0.5rem 2rem;">
         <div class="d-flex w-100 justify-content-start mb-1">
         <h5>Feel free to take a break. </h5>
-           <button class="btn pt-0"
+           <button class="btn pt-0 bg-white"
               data-toggle="popover"
               title="The Mood Bar"
                    data-placement="bottom"
